--- a/client/src/components/signature/signature.scss
+++ b/client/src/components/signature/signature.scss
@@ -1,8 +1,8 @@
 .wrapper-signature {
   position: absolute;
-  top: 12px;
-  font-size: 12px;
-  right: 16px;
+  bottom: 100px;
+  font-size: 10px;
+  left: 24px;
 }
 
 .signature {
