feat: added login page and top navigation bar

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,5 +3,7 @@
 
 @import "./components/signature/signature.scss";
 @import "./components/themeButton/themeButton.scss";
+@import "./components/themeInput/themeInput.scss";
 
 @import "./pages/landing/landing.scss";
+@import "./pages/login/login.scss";
