--- a/client/src/components/themeInput/themeInput.scss
+++ b/client/src/components/themeInput/themeInput.scss
@@ -1,20 +1,9 @@
-.button {
-  width: auto;
-  // margin: 0 8px;
-  text-align: center;
+.input {
   padding: 12px 24px;
   border-radius: 12px;
   font-size: 16px;
   border: 1px solid transparent;
   color: black;
-
-  &-link {
-    text-decoration: none;
-  }
-
-  &:hover {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  }
 
   &-outline {
     border: 1px solid $theme-dark;
@@ -22,7 +11,7 @@
   }
 
   &-shadow {
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.25);
   }
 
   &-light {
