added profile pag and project items with progress bar

--- a/client/src/assets/styles/constants.scss
+++ b/client/src/assets/styles/constants.scss
@@ -15,3 +15,5 @@ $theme-black: black;
 $theme-black-hover: black;
 $theme-white: white;
 $theme-white-hover: white;
+$theme-transparent: transparent;
+$theme-transparent-hover: transparent;
