--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,7 +5,9 @@
 @import "./components/theme/themeButton/themeButton.scss";
 @import "./components/theme/themeInput/themeInput.scss";
 @import "./components/theme/themeTitle/themeTitle.scss";
+@import "./components/project/project.scss";
 
 @import "./pages/landing/landing.scss";
 @import "./pages/register/register.scss";
 @import "./pages/login/login.scss";
+@import "./pages/profile/profile.scss";
