--- a/client/src/components/theme/themeButton/themeButton.scss
+++ b/client/src/components/theme/themeButton/themeButton.scss
@@ -1,6 +1,5 @@
 .button {
   width: auto;
-  // margin: 0 8px;
   text-align: center;
   padding: 12px 24px;
   border-radius: 12px;
@@ -22,6 +21,7 @@
 
   &:hover {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
   }
 
   &-outline {
@@ -82,6 +82,18 @@
     background: $theme-white;
     &:hover {
       background: $theme-white-hover;
+    }
+  }
+
+  &-transparent {
+    background: $theme-transparent;
+    box-shadow: none;
+    color: $theme-dark;
+
+    &:hover {
+      background: $theme-transparent-hover;
+      box-shadow: none;
+      color: $theme-black;
     }
   }
 }
