feat: added add new project page

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,9 +5,10 @@
 @import "./components/theme/themeButton/themeButton.scss";
 @import "./components/theme/themeInput/themeInput.scss";
 @import "./components/theme/themeTitle/themeTitle.scss";
-@import "./components/project/project.scss";
+@import "./components/project/projectItem/projectItem.scss";
 
 @import "./pages/landing/landing.scss";
 @import "./pages/register/register.scss";
 @import "./pages/login/login.scss";
 @import "./pages/profile/profile.scss";
+@import "./pages/project/project.scss";
