--- a/client/src/components/theme/themeTextarea/themeTextarea.scss
+++ b/client/src/components/theme/themeTextarea/themeTextarea.scss
@@ -1,27 +1,9 @@
-.button {
-  width: auto;
-  text-align: center;
+.input {
   padding: 12px 24px;
   border-radius: 12px;
   font-size: 16px;
   border: 1px solid transparent;
   color: black;
-  height: 44px;
-
-  &-small {
-    padding: 8px 16px;
-    border-radius: 8px;
-    font-size: 14px;
-    height: 32px;
-  }
-
-  &-link {
-    text-decoration: none;
-  }
-
-  &:hover {
-    cursor: pointer;
-  }
 
   &-outline {
     border: 1px solid $theme-dark;
@@ -29,11 +11,7 @@
   }
 
   &-shadow {
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-
-    &:hover {
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    }
+    box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.25);
   }
 
   &-light {
@@ -75,7 +53,6 @@
 
   &-black {
     background: $theme-black;
-    color: white;
     &:hover {
       background: $theme-black-hover;
     }
