feat: added new card page and project page

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -6,9 +6,11 @@
 @import "./components/theme/themeInput/themeInput.scss";
 @import "./components/theme/themeTitle/themeTitle.scss";
 @import "./components/project/projectItem/projectItem.scss";
+@import "./components/project/projectStage/projectStage.scss";
 
 @import "./pages/landing/landing.scss";
 @import "./pages/register/register.scss";
 @import "./pages/login/login.scss";
 @import "./pages/profile/profile.scss";
 @import "./pages/project/project.scss";
+@import "./pages/card/card.scss";
