--- a/client/src/components/project/projectItem/projectItem.scss
+++ b/client/src/components/project/projectItem/projectItem.scss
@@ -1,4 +1,5 @@
 .project {
+  // Do not add .project styles here, since they exist in pages/project/project.scss
   &-item {
     display: flex;
     width: auto;
