--- a/client/src/pages/project/project.scss
+++ b/client/src/pages/project/project.scss
@@ -4,4 +4,32 @@
 
   &-new {
   }
+
+  &-stages {
+    margin-top: 64px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+  }
+
+  &-info {
+    padding: 16px;
+    margin: 8px;
+    border-radius: 16px;
+    background: $theme-light;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+
+    &-title {
+      font-size: 20px;
+      margin-bottom: 8px;
+    }
+
+    &-description {
+      margin-bottom: 16px;
+    }
+
+    &-footer {
+      display: flex;
+      justify-content: end;
+    }
+  }
 }
