feat: added red color

--- a/client/src/components/theme/themeButton/themeButton.scss
+++ b/client/src/components/theme/themeButton/themeButton.scss
@@ -73,6 +73,14 @@
     }
   }
 
+  &-red {
+    background: $theme-red;
+    color: white;
+    &:hover {
+      background: $theme-red-hover;
+    }
+  }
+
   &-black {
     background: $theme-black;
     color: white;
