--- a/client/src/assets/styles/constants.scss
+++ b/client/src/assets/styles/constants.scss
@@ -19,3 +19,5 @@ $theme-white: white;
 $theme-white-hover: white;
 $theme-transparent: transparent;
 $theme-transparent-hover: transparent;
+
+$wrapper-top-height: 48px;
