--- a/client/src/components/theme/themeButton/themeButton.scss
+++ b/client/src/components/theme/themeButton/themeButton.scss
@@ -7,6 +7,9 @@
   border: 1px solid transparent;
   color: black;
   height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &-small {
     padding: 8px 16px;
@@ -17,6 +20,12 @@
 
   &-link {
     text-decoration: none;
+  }
+
+  &-icon {
+    font-size: 20px;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   &:hover {
