--- a/client/src/pages/card/card.scss
+++ b/client/src/pages/card/card.scss
@@ -1,7 +1,51 @@
 .card {
   width: 100%;
-  padding: 16px;
+  // padding: 16px;
 
   &-new {
+  }
+
+  &-item {
+    display: flex;
+    width: auto;
+    text-align: center;
+    margin-bottom: 12px;
+    padding: 12px 20px;
+    border-radius: 12px;
+    font-size: 16px;
+    color: black;
+    border: 1px solid $theme-white;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    background: $theme-light;
+    position: relative;
+
+    &:hover {
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
+  }
+
+  &-sections {
+    margin-top: 16px;
+  }
+}
+
+.cards {
+  &-stage {
+    border-radius: 16px;
+    padding: 8px;
+    border: 1px solid $theme-dark;
+    margin-bottom: 16px;
+    background-color: $theme-white;
+
+    &-header {
+      display: flex;
+      align-items: center;
+    }
+
+    &-cards {
+      margin-top: 8px;
+    }
   }
 }
