added card page

--- a/client/src/assets/styles/constants.scss
+++ b/client/src/assets/styles/constants.scss
@@ -19,5 +19,6 @@ $theme-white: white;
 $theme-white-hover: white;
 $theme-transparent: transparent;
 $theme-transparent-hover: transparent;
+$theme-border: #c1c8c9;
 
 $wrapper-top-height: 48px;
