--- a/client/src/components/theme/themeButton/themeButton.scss
+++ b/client/src/components/theme/themeButton/themeButton.scss
@@ -33,7 +33,7 @@
   }
 
   &-outline {
-    border: 1px solid $theme-dark;
+    border: 1px solid $theme-border;
     background-color: transparent;
   }
 
