--- a/client/src/components/theme/themeTextarea/themeTextarea.scss
+++ b/client/src/components/theme/themeTextarea/themeTextarea.scss
@@ -6,7 +6,7 @@
   color: black;
 
   &-outline {
-    border: 1px solid $theme-dark;
+    border: 1px solid $theme-border;
     background-color: transparent;
   }
 
