--- a/client/src/pages/card/card.scss
+++ b/client/src/pages/card/card.scss
@@ -14,7 +14,7 @@
     border-radius: 12px;
     font-size: 16px;
     color: black;
-    border: 1px solid $theme-white;
+    border: 1px solid $theme-border;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
@@ -29,13 +29,44 @@
   &-sections {
     margin-top: 16px;
   }
+
+  &-section {
+    background-color: $theme-white;
+    border: 1px solid $theme-border;
+    border-radius: 16px;
+    padding: 16px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+
+    &-title {
+      text-align: center;
+      position: absolute;
+      top: -1px;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+      background-color: $theme-white;
+      border: 1px solid $theme-border;
+      border-top: none;
+      padding: 4px 24px;
+      border-bottom-left-radius: 16px;
+      border-bottom-right-radius: 16px;
+      font-size: 12px;
+    }
+
+    &-content {
+      padding-top: 24px;
+      padding-bottom: 16px;
+      text-align: center;
+    }
+  }
 }
 
 .cards {
   &-stage {
     border-radius: 16px;
     padding: 8px;
-    border: 1px solid $theme-dark;
+    border: 1px solid $theme-border;
     margin-bottom: 16px;
     background-color: $theme-white;
 
