--- a/client/src/pages/profile/profile.scss
+++ b/client/src/pages/profile/profile.scss
@@ -8,6 +8,8 @@
   &-img {
     border-radius: 50%;
     width: 100px;
+    border: 1px solid $theme-border;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
   }
 
   &-projects {
