--- a/client/src/pages/project/project.scss
+++ b/client/src/pages/project/project.scss
@@ -96,7 +96,7 @@
     border-radius: 12px;
     font-size: 16px;
     color: black;
-    border: 1px solid $theme-dark;
+    border: 1px solid $theme-border;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
