added practice page

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -12,3 +12,4 @@
 @import "./pages/profile/profile.scss";
 @import "./pages/project/project.scss";
 @import "./pages/card/card.scss";
+@import "./pages/practice/practice.scss";
