--- a/client/src/pages/card/card.scss
+++ b/client/src/pages/card/card.scss
@@ -27,7 +27,7 @@
   }
 
   &-sections {
-    margin-top: 16px;
+    margin-top: 32px;
   }
 
   &-section {
@@ -35,6 +35,7 @@
     border: 1px solid $theme-border;
     border-radius: 16px;
     padding: 16px;
+    margin-bottom: 16px;
     position: relative;
     display: flex;
     justify-content: center;
@@ -58,6 +59,13 @@
       padding-top: 24px;
       padding-bottom: 16px;
       text-align: center;
+    }
+
+    &-hover {
+      &:hover {
+        cursor: pointer;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      }
     }
   }
 }
