feat: added practice page

--- a/client/src/assets/styles/constants.scss
+++ b/client/src/assets/styles/constants.scss
@@ -2,23 +2,33 @@ $gradient-blue: #94c1f6;
 $gradient-pink: #fdbdbd;
 
 $theme-dark: #2c2d30;
-$theme-dark-hover: #131414;
+$theme-dark-hover: #161618;
+$theme-dark-disabled: #52545a;
 $theme-green: #aeeea4;
 $theme-green-hover: #8de37f;
+$theme-green-disabled: #c2ecbb;
 $theme-blue: #a3dae7;
 $theme-blue-hover: #7cd2e6;
+$theme-blue-disabled: #badde5;
 $theme-yellow: #fae1a2;
 $theme-yellow-hover: #f9d375;
+$theme-yellow-disabled: #fbeabe;
 $theme-red: #dd4343;
 $theme-red-hover: #dd2828;
+$theme-red-disabled: #db7d7d;
 $theme-light: #e3e7f1;
 $theme-light-hover: #d9dde6;
+$theme-light-disabled: #f4f6fc;
 $theme-black: black;
 $theme-black-hover: black;
+$theme-black-disabled: black;
 $theme-white: white;
 $theme-white-hover: white;
+$theme-white-disabled: white;
 $theme-transparent: transparent;
 $theme-transparent-hover: transparent;
+$theme-transparent-disabled: transparent;
+
 $theme-border: #c1c8c9;
 
 $wrapper-top-height: 48px;
